--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -85,6 +85,14 @@ th
   float: none;
 }
 
+#sf_admin_container .textAlignRight {
+  text-align: right;
+}
+
+#sf_admin_container .sf_admin_filter tbody, #sf_admin_container .sf_admin_filter tfoot {
+  display: none;
+}
+
 #header h1
 {
   width: auto;
