--- a/web/css/main.css
+++ b/web/css/main.css
@@ -16,15 +16,8 @@ version: 2.6.0
 */
 body{font:13px/1.231 arial,helvetica,clean,sans-serif;*font-size:small;*font:x-small;}select,input,button,textarea{font:99% arial,helvetica,clean,sans-serif;outline: none;}table{font-size:inherit;font:100%;}pre,code,kbd,samp,tt{font-family:monospace;*font-size:108%;line-height:100%;}
 
-#menu ul {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	list-style-image: none;
-}
-
-#menu li {
-	display: inline;
+html {
+  background-color: #48474f;
 }
 
 ul {
@@ -41,6 +34,66 @@ ul > li {
 
 p {
   margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+b,
+strong
+{
+  font-weight: bold;
+}
+
+
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.75em;
+}
+
+small {
+  font-size: 0.75em;
+}
+
+#menu
+{
+  background-color: #83808f;
+  width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  color: #fff;
+  line-height: 3em;
+}
+
+#menu ul {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	list-style-image: none;
+}
+
+#menu li {
+	display: inline;
+}
+
+#menu ul li a {
+  color: #fff;
+  font-weight: bold;
+}
+
+#content, #footer {
+  width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #bdbacf;
+  padding: 1em;
+}
+
+#footer {
   margin-bottom: 1em;
 }
 
